syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime.proto";

message ConnectivityEntryMsg {
  string node = 1;
  string status = 2;
}

message NodeConnectivityMsg {
  string endpoint = 1;
  string connectivity_type = 2;
  repeated ConnectivityEntryMsg connectivity_info = 3;
  int64 epoch = 4;
}
